--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ body {
   padding: 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .main-left {
@@ -85,13 +86,6 @@ body {
   font-family: "Noto Sans Georgian", sans-serif;
   margin-left: 30px;
 }
-
-
-
-/* .content_overlay p {
-  font-size: 1.2rem;
-  margin-bottom: 20px;
-} */
 
 .learn_more_btn {
   background-color: #ff5a33;
@@ -193,6 +187,7 @@ body {
 
 .bulletin {
   width: 50%;
+  height: 140px;
   max-width: 100%;
   display: flex;
   flex-direction: column;
@@ -209,12 +204,6 @@ body {
 
 }
 
-.bulletin2 {
-  padding: 35px 15px;
-}
-.bulletin4 {
-  padding: 35px 15px;
-}
 
 .bulletin:hover {
   transform: scale(1.02);
@@ -224,7 +213,7 @@ body {
 
 
 .bulletin-span {
-  font-size: 30px;
+  font-size: 25px;
   color: white;
   font-weight: 600;
   display: flex;
@@ -234,12 +223,10 @@ body {
   background-color: #222;
 }
 
-.bulletin-span1 {
-  padding: 25px 0px;
-}
+
 
 .bulletin-p { 
-  font-size: 12px !important;
+  font-size: 11px !important;
   color: white;
   text-align: left;
   margin-bottom: 0px !important;
@@ -316,8 +303,8 @@ body {
   width: 100%;
   max-width: 100%;
   align-items: flex-end;
-
   gap: 7px;
+  margin:10px 0px 30px 0;
 }
 
 .accordion-item {
@@ -513,13 +500,21 @@ body {
 .language-dropdown {
   display: flex;
   flex-direction: column;
-  margin-left: 5px;
+  margin-left: 0px;
   list-style: none;
+  background-color: #222;
 }
 
 .dropdown-item {
   cursor: pointer;
 }
+
+.dropdown-item:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #222;
+}
+
 
 
 
@@ -575,7 +570,7 @@ body {
 .btns_overlay {
   width: 100%;
   max-width: 100%;
-  padding: 60px 0px;
+  padding: 100px 0px;
   background-color: rgb(18, 18, 18);
   display: flex;
   flex-direction: column;
@@ -783,7 +778,7 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 .SliceCarouselLifecycl_section {
   width: 100%;
   max-width: 100%;
-  padding: 3.7rem 0;
+  padding: 9rem 0 5rem 0;
   background-color: white;
   z-index: 10000;
 }
@@ -840,11 +835,12 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 
 .SliceCarouselLifecycl-card {
   flex: 0 0 auto; /* Prevent cards from shrinking */
-  width: 350px; /* Set a fixed width */
-  background-color: rgb(15, 15, 15);
+  width: 400px; /* Set a fixed width */
+  background-color: #222;
   color: #fff;
   border-radius: 8px;
   transition: transform 0.3s ease-in-out; /* Smooth card hover effect */
+  padding: 10px;
 }
 
 .SliceCarouselLifecycl-card:hover {
@@ -868,26 +864,17 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 }
 
 .SliceCarouselLifecycl-p {
-  font-size: 18px;
+  font-size: 20px;
   font-family: "__helvetica_now_display_bbebbe","__helvetica_now_display_Fallback_bbebbe";
+  font-family: sans-serif;
 }
 
-.SliceCarouselLifecycl-button {
-  width: 150px;
-  padding: 16px;
-  background-color: rgb(245, 95, 54);
-  color: rgb(15, 15, 15);
-  border-radius: 7px;
-  border: none;
-
-}
 
 .SliceCarouselLifecycl-card-bottom {
   width: 100%;
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  /* gap: 8px; */
   font-family: "__proxima_nova_extra_wide_99e4a9","__proxima_nova_extra_wide_Fallback_99e4a9";
 }
 
@@ -899,6 +886,7 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 
 .SliceCarouselLifecycl-card-bottom-p {
   font-size: 20px;
+  color: white;
 }
 
 
@@ -915,7 +903,7 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 
 @media only screen and (max-width: 1200px) {
   .bulletin-span {
-    font-size: 22px;
+    font-size: 16px;
   }
 
   .main-right {
@@ -940,6 +928,12 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
     padding: 0px;
   }
 
+  .input {
+    width: 400px;
+  }
+  .accordion-content {
+    font-size: 10px;
+  }
 }
 
 
@@ -956,12 +950,16 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
     
 
   }
+  .input {
+    width: 320px;
+  }
 
 
   .custom-accordion{
     width: 100%;
     max-width: 100%;
     align-items: center !important;
+    margin: 0;
   }
 
   .main_title-h1 {
@@ -1016,16 +1014,28 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
   }
 
   .bulletin {
-    padding: 23px;
-  }
-
-  .bulletin-span1 {
-    padding: 0;
+    height: 90px;
   }
 
   }
   
 
+
+  @media only screen and (max-width: 800px)  {
+    .calculator-container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .i-x1 {
+      margin-bottom: 25px;
+    }
+
+    .input {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
 
   @media only screen and (max-width: 700px) {
     .main_title-h1 {
@@ -1049,6 +1059,11 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
     .button-primary {
       padding: 20px 0px;
     }
+
+    .content_overlay {
+      margin-top: 20px;
+    }
+
   }
   
   
@@ -1059,6 +1074,9 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
     }
 
 
+    .bulletin {
+      border-radius: 16px;
+    }
 
     .content_overlay {
       gap: 10px;
@@ -1076,21 +1094,41 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
     }
 
     .bulletin-span {
-      font-size: 20px;
-    }
-
-    .accordion-content {
-      font-size: 15px;
+      font-size: 16px;
     }
 
     .number-slider-btn {
       left: 30%;
+    }
+
+    .bulletin_overlay-btn {
+      font-size: 25px;
+    }
+
+    .text-xl1 {
+      font-size: 2.5rem;
+    }
+
+    .SliceCarouselLifecycl-card {
+      width: 400px;
+    }
+
+    .SliceCarouselLifecycl-p {
+      font-size: 24px;
     }
   } 
 
 
   @media only screen and (max-width: 415px) {
     
+    .SliceCarouselLifecycl-card {
+      width: 300px;
+    }
+
+    .SliceCarouselLifecycl-p {
+      font-size: 20px;
+    }
+
     .number-slider-btn {
       left: 25%;
     }
@@ -1129,7 +1167,7 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
   position: fixed;
   text-align: center;
   width: 12rem; /* 48px */
-  height: 3.8rem;
+  height: 3.5rem;
   border-radius: 1rem; /* rounded-2xl */
   color: black;
   font-size: 1.25rem; /* text-xl */
@@ -1139,6 +1177,7 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
   z-index: 100000;
   margin-top: 20px;
   margin-left: 20px;
+  border: none;
 }
 
 .button-bg {
@@ -1163,3 +1202,102 @@ backdrop-filter: blur(1px); /* Apply a blur effect */
 .button-text {
   transform: translateX(0.5rem); /* translate-x-2 */
 }
+
+/* loader */
+
+/* From Uiverse.io by Donewenfu */ 
+
+.preloader {
+  width: 100%;
+  height: 100vh;
+  background-color: #222;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden  ;
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.jimu-primary-loading:before,
+.jimu-primary-loading:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+
+.jimu-primary-loading:before {
+  left: -19.992px;
+}
+
+.jimu-primary-loading:after {
+  left: 19.992px;
+  -webkit-animation-delay: 0.32s !important;
+  animation-delay: 0.32s !important;
+}
+
+.jimu-primary-loading:before,
+.jimu-primary-loading:after,
+.jimu-primary-loading {
+  background: #076fe5;
+  -webkit-animation: loading-keys-app-loading 0.8s infinite ease-in-out;
+  animation: loading-keys-app-loading 0.8s infinite ease-in-out;
+  width: 13.6px;
+  height: 32px;
+}
+
+.jimu-primary-loading {
+  text-indent: -9999em;
+  margin: auto;
+  position: absolute;
+  right: calc(50% - 6.8px);
+  top: calc(50% - 16px);
+  -webkit-animation-delay: 0.16s !important;
+  animation-delay: 0.16s !important;
+}
+
+@-webkit-keyframes loading-keys-app-loading {
+
+  0%,
+  80%,
+  100% {
+    opacity: .75;
+    box-shadow: 0 0 #076fe5;
+    height: 32px;
+  }
+
+  40% {
+    opacity: 1;
+    box-shadow: 0 -8px #076fe5;
+    height: 40px;
+  }
+}
+
+@keyframes loading-keys-app-loading {
+
+  0%,
+  80%,
+  100% {
+    opacity: .75;
+    box-shadow: 0 0 #076fe5;
+    height: 32px;
+  }
+
+  40% {
+    opacity: 1;
+    box-shadow: 0 -8px #076fe5;
+    height: 40px;
+  }
+}
+
