--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,6 @@ body {
   margin-bottom: 70px;
 }
 
-
 /* foooter */
 
 .footer {
@@ -127,8 +126,6 @@ body {
   flex-direction: column;
   gap: 10px;
 }
-
-
 
 .list li {
   display: flex;
@@ -659,10 +656,6 @@ body {
 .prod2-3 { top: 50%; font-size: 25px; width: 40%; right: -23%; color: white; transform: translate(50%, -50%); }
 .prod2-4 { bottom: 0; top: 101%; font-size: 25px; left: 50%; color: white; transform: translate(-50%, 50%); }
 
-.circular-menu2 {
-
-}
-
 
 /* Styling for info box */
 .restaurant-span-text {
@@ -764,6 +757,104 @@ body {
   font-family: "Roboto", serif;
 
 }
+
+[class^="number-slide"],
+[class*=" number-slide"] {
+  background: rgb(214, 29, 29);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  color: #fff;
+  font-weight: 500;
+  height: 100vh;
+  max-height: 100vh;
+}
+
+  .number-slides1 { 
+    width: 100%;
+    max-width: 100%; 
+    height: 100%; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+    height: 100vh;
+    background-image: url(../src/assets/3y.jpg);
+  }
+
+.keen-slider__slide {
+  width: 100%;
+  max-width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden;
+  height: 100vh;
+  
+}
+
+
+.scroll-btn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #e1e1e1;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  position: absolute;
+  top: 0%;
+}
+
+.scroll-btn:hover {
+  background-color: #2980b9;
+}
+
+
+
+.number-x1 {
+
+  background-image: url(../src/assets/4y.jpg) !important;
+}
+.number-x2 {
+
+  background-image: url(../src/assets/yx1.jpg) !important;
+
+}
+.number-x3 {
+  background-image: url(../src/assets/6y.png) !important;
+
+}
+
+
+.project-slider-text-container {
+  width: 100%;
+  max-width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.project-slider-span {
+  font-size: 120px;
+  color: #ffffff;
+  font-weight: 400;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Black shadow with some transparency */
+  font-family: "Roboto", serif;
+  position: absolute;
+  left: 37%;
+  top: 40%;
+  z-index: 1000;
+
+}
+
+/* down arrow */
+
 
 @media only screen and (max-width: 1280px) {
   .circular-menu2 {
