--- a/src/index.css
+++ b/src/index.css
@@ -638,6 +638,17 @@ body {
   color: #f15a22;
   font-weight: bold;
   transform: scale(1.1); /* Optional for enlarging the active item */
+  transition: all 0.3s;
+}
+.active3 {
+  color:#4129f9;
+  font-weight: bold;
+  transform: scale(1.1); /* Optional for enlarging the active item */
+  transition: all 0.3s;
+}
+
+.active3:hover {
+  color: #4d3ae0;
 }
 
 /* Circular positioning for each item */
@@ -1268,7 +1279,7 @@ body {
   }
 
   .sircle-span2 {
-    font-size: 15px !important; 
+    font-size: 13px !important; 
   }
 
   .about-span {
@@ -1276,22 +1287,22 @@ body {
   }
 
   .item-1 {
-    font-size: 14px;
+    font-size: 12px;
     top: -7%;
   }
 
   .item-2{
-    font-size: 14px;
+    font-size: 12px;
     left: -37% !important;
   }
 
   .item-3 {
-    font-size: 14px;
+    font-size: 12px;
     right: -30%;
   }
 
   .item-4 {
-    font-size: 14px;
+    font-size: 12px;
     top: 103%;
   }
 
@@ -1306,12 +1317,12 @@ body {
   .restaurant-2 {
     left: 51%;
     top: -10%;
-    font-size: 13px !important;
+    font-size: 12px !important;
     width: 50% !important;
   }
 
   .restaurant-3 {
-    font-size: 13px !important;
+    font-size: 12px !important;
     right: -18%;
 }
 
@@ -1322,24 +1333,24 @@ body {
 }
 
 .prod2-2 {
-  top: -15%;
+  top: -10%;
   width: 134%;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .prod2-3 {
-  font-size: 12px;
+  font-size: 11px;
   right: -24%;
 }
 
 .prod2-1 {
-  font-size: 12px;
-  left: -33%;
+  font-size: 11px;
+  left: -29%;
 }
 
 .prod2-4 {
   width: 100%;
-  font-size: 12px;
+  font-size: 11px;
   top: 104%;
 }
 
@@ -1373,6 +1384,7 @@ body {
 
   .project-sircle-p1 {
     font-size: 13px !important;
+    line-height: 16px !important;
   }
   .project-sircle-p2 {
     top: 78% !important;
@@ -1421,8 +1433,9 @@ body {
   }
 
   .circular-menu3 {
-    left: 30% !important;
+    left: 26% !important;
     top: 45%;
+    
   }
 
   .s-c-1 {
@@ -1438,12 +1451,12 @@ body {
 
   
   .restaurant-1 {
-    font-size: 11px !important;
+    font-size: 10px !important;
     width: 50%;
     left: -25%;
   }
   .restaurant-3 {
-    font-size: 11px !important;
+    font-size: 10px !important;
     right: -27%;
     width: 50%;
 
@@ -1451,13 +1464,13 @@ body {
 
   .restaurant-4 {
     width: 100%;
-    font-size: 11px !important;
+    font-size: 10px !important;
     top: 105%;
   }
   .restaurant-2 {
     width: 100% !important;
     left: 49%;
-    font-size: 11px;
+    font-size: 10px;
     top: -22%;
   }
 
@@ -1479,25 +1492,25 @@ body {
 .circular-menu {
   width: 135px;
   height: 135px;
-  left: 29% !important;
+  left: 25% !important;
 }
 
 .item-2 {
-  font-size: 11px;
-  left: -37% !important;
+  font-size: 10px;
+  left: -30% !important;
 }
 
 .item-1 {
-  font-size: 11px;
+  font-size: 10px;
 }
 
 .item-3 {
-  font-size: 11px;
+  font-size: 10px;
   right: -28%;
 }
 
 .item-4 {
-  font-size: 11px;
+  font-size: 10px;
   top: 103%;
 }
 
@@ -1506,7 +1519,7 @@ body {
 @media only screen and (max-width: 415px) {
   
   .project-slider-span {
-    left: 17%;
+    left: 12%;
   }
 
   .carousel-container {
@@ -1525,7 +1538,7 @@ body {
     width: 130px;
     height: 130px;
     top: 60% !important;
-    left: 31%;
+    left: 27%;
     
   }
   
