--- a/src/index.css
+++ b/src/index.css
@@ -1619,9 +1619,9 @@ body {
     margin-bottom: 40px;
   }
 
-  .sircle-span {
+  /* .sircle-span {
     font-size: 16px;
-  }
+  } */
 
   .about-span {
     font-size: 20px;
@@ -1644,3 +1644,25 @@ body {
 }
 
 
+@media only screen and (max-width: 405px) {
+  .circular-menu {
+    width: 120px;
+    height: 120px;
+  }
+
+  .carousel-next-page {
+    font-size: 14px;
+  }
+  .item-1 {
+    font-size: 13px;
+  }
+  .item-2 {
+    font-size: 13px;
+  }
+  .item-3 {
+    font-size: 13px;
+  }
+  .item-4 {
+    font-size: 13px;
+  }
+}
