--- a/src/index.css
+++ b/src/index.css
@@ -630,6 +630,14 @@ body {
   font-family: "Roboto", serif;
 
 }
+  .menu-items {
+    transition: all 0.3s;
+  }
+  .menu-items:hover {
+
+  cursor: pointer;
+  color: #f15a22;
+}
 
 .menu-item:hover {
   color: #f15a22;
@@ -1072,9 +1080,12 @@ body {
       }
       
     }
-    
-    @media only screen and (max-width: 950px) {
 
+    @media only screen and (max-width: 970px) {
+
+    }
+
+    @media only screen and (max-width: 950px) {  
       .circular-menu {
         width: 250px;
         height: 250px;
@@ -1319,6 +1330,30 @@ body {
   width: 81%;
   left: 62.5%;
 }
+
+
+.sircle-span1 {
+  font-size: 25px !important;
+}
+/* res more */
+
+.menu-items {
+  font-size: 25px !important;
+}
+
+.sircle-spans1 {
+  font-size: 25px !important;
+}
+
+
+.items-4 {
+  margin-bottom: 15px !important;
+}
+
+.sircle-spans1 {
+  margin-bottom: 0px !important;
+}
+
 }
 @media only screen and (max-width: 580px) {
   .project-slider-span {
@@ -1538,6 +1573,25 @@ body {
     font-size: 10px;
     top: -22%;
   }
+/*  */
+  .menu-items {
+    /* padding: 10px 0px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px !important;
+
+  }
+
+  .carousel-next-pages {
+    font-size: 24px !important;
+    padding: 10px;
+  }
+
+  .sircle-spans1 {
+    font-size: 20px !important;
+  }
 
 }
 
@@ -1607,6 +1661,11 @@ body {
     left: -52% !important;
     font-weight: bold;
 }
+/*  */
+
+.menu-items {
+  font-size: 16px !important;
+}
 
 }
 @media only screen and (max-width: 415px) {
@@ -1667,3 +1726,118 @@ body {
     font-size: 13px;
   }
 }
+
+/*  */
+
+.carousel-containers {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: auto !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  background-color: black;
+  border-radius: 20px;
+  margin-bottom: 100px;
+}
+
+.carousel-next-pages {
+  /* position: absolute;
+  top: 85%; */
+  font-size: 35px;
+  transition: all 0.3s ease-in-out; /* Smooth transition for all changes */
+  color: #fff; /* Default color */
+  text-decoration: none;
+  border: 1px solid #f15a22 ;
+  padding: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.carousel-next-page:hover {
+  color: #f15a22; /* Change color on hover */ 
+  cursor: pointer;
+  transform: scale(1.1); /* Slightly increase the size */
+}
+.carousel-next-pages:hover {
+  color: #f15a22; /* Change color on hover */ 
+  cursor: pointer;
+  transform: scale(1.1); /* Slightly increase the size */
+}
+
+.circular-menus {
+  width: 100%;
+  max-width: 100%;
+  /* min-height: 100vh; */
+  padding: 50px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.info-boxs {
+  color: #fff;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+}
+
+.sircle-span1 {
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+}
+.sircle-spans1 {
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+  margin-bottom: 55px;
+}
+
+.items-1 {
+  font-size: 30px;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.items-2 {
+  font-size: 30px;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.items-3 {
+  font-size: 30px;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.items-4 {
+  font-size: 30px;
+  width: 80%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  margin-bottom: 40px;
+}
+
+
+
+
+
+/*  */
